--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,12 @@
 	},
 	"dependencies": {
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
+		"dotenv": "^16.3.1",
 		"express": "~4.16.1",
+		"express-async-handler": "^1.2.0",
+		"express-validator": "^7.0.1",
 		"http-errors": "~1.6.3",
 		"jade": "~1.11.0",
 		"mongoose": "^8.0.4",
