--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,16 @@
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"cloudinary": "^1.41.2",
+		"compression": "^1.7.4",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
 		"debug": "~2.6.9",
 		"dotenv": "^16.3.1",
 		"express": "~4.16.1",
 		"express-async-handler": "^1.2.0",
+		"express-rate-limit": "^7.2.0",
 		"express-validator": "^7.0.1",
+		"helmet": "^7.1.0",
 		"http-errors": "~1.6.3",
 		"jade": "~1.11.0",
 		"jsonwebtoken": "^9.0.2",
